# robotframework-vitro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-21-robotframework-vitro-implementation.md
docs/superpowers/specs/: 2026-04-21-robotframework-vitro-design.md
examples/: README.md  basic_test.robot
robotframework_vitro/: __init__.py  cli.py  exceptions.py  library.py  listener.py  variables.py
tests/: test_cli.py  test_exceptions.py  test_library.py  test_listener.py  test_public_api.py  test_variables.py
