[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "robotframework-vitro"
version = "0.1.0"
description = "Robot Framework bridge for the vitro test framework"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "rjvisser" }]
keywords = ["robotframework", "vitro", "testbed", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "robotframework>=6.0",
    "vitro>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
]

[project.scripts]
vitrorobot = "robotframework_vitro.cli:main"

[project.urls]
Homepage = "https://github.com/alottabits/robotframework-vitro"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
