[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "robotframework-vitro"
version = "0.1.0"
description = "Robot Framework bridge for the vitro test framework"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Alottabits", email = "rjvisser@alottabits.com" }]
maintainers = [{ name = "Alottabits", email = "rjvisser@alottabits.com" }]
keywords = ["robotframework", "vitro", "testbed", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Robot Framework",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "robotframework>=6.0",
    "vitro>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
]

[project.scripts]
vitrorobot = "robotframework_vitro.cli:main"

[project.urls]
Homepage = "https://github.com/alottabits/robotframework-vitro"
Repository = "https://github.com/alottabits/robotframework-vitro"
Issues = "https://github.com/alottabits/robotframework-vitro/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
